--- a/seance1_HTML.html
+++ b/seance1_HTML.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <!-- 1st Chalenge -->
-        <div class="subsectionTitle"><h1 id="chalenge9">Chalenge 2</h1></div>
+        <div class="subsectionTitle"><h1 id="chalenge9">2048</h1></div>
         <div class="game">
             <table class="table_c1" id="table">
                 <tr>
@@ -35,7 +35,7 @@
                     <td></td>
                 </tr>
             </table>
-            <div class="scoreTitle">Score : </div> <div class="score" id="score">0</div>
+            <div class="scoreTitle">Score</div> <div class="score" id="score">0</div>
         </div>
         <script src="seance1_JS.js"></script>
     </body>
