--- a/main.html
+++ b/main.html
@@ -2,7 +2,17 @@
 
 <html lang="fr">
     <head>
+        <meta charset="utf-8">
+
         <title>2048</title>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <meta name="description" content="Game of 2048 created during the course of MOOC at the Institut Villebon Georges Charpak.">
+        <meta name="author" content="Mathieu V.">
+
+        <link rel="icon" href="favicon.ico">
+
         <link rel="stylesheet" href="style/tablecolor.css">
         <link rel="stylesheet" href="style/mainStyle.css">
     </head>
@@ -35,7 +45,13 @@
                     <td class="x3y3"></td>
                 </tr>
             </table>
-            <div class="scoreTitle">Score</div> <div class="score" id="score">0</div>
+            <div class="scoreTitle">Score</div>
+            <div class="score" id="score">0</div>
+            <button class="newGameButton" onclick="newGame()">New Game</button>
+        </div>
+        <div id="overlay">
+            <div id="overlay-text">You loose !</div>
+            <button class="newGameButton-loose" onclick="newGame()">New game</button>
         </div>
         <script src="script/game.js"></script>
     </body>
