--- a/main.html
+++ b/main.html
@@ -16,10 +16,14 @@
         <link rel="stylesheet" href="style/tablecolor.css">
         <link rel="stylesheet" href="style/mainStyle.css">
     </head>
+
     <body>
+
         <div class="game">
-        <div class="subsectionTitle"><h1 id="chalenge9">2048</h1></div>
-            <table class="table_c1" id="table">
+
+            <div class="subsectionTitle"><h1 id="challenge9">2048</h1></div>
+
+            <table id="table">
                 <tr>
                     <td class="x0y0"></td>
                     <td class="x0y1"></td>
@@ -45,14 +49,28 @@
                     <td class="x3y3"></td>
                 </tr>
             </table>
-            <div class="scoreTitle">Score</div>
-            <div class="score" id="score">0</div>
+
+            <div id="scoreBoard">
+                <div id="scoreBox">
+                    <div id="scoreTitle">Score</div>
+                    <div id="score"></div>
+                </div>
+                <div id="bestScoreBox">
+                    <div id="bestScoreTitle">Best</div>
+                    <div id="bestScore">0</div>
+                </div>
+            </div>
+
             <button class="newGameButton" onclick="newGame()">New Game</button>
+
         </div>
+
         <div id="overlay">
             <div id="overlay-text">You loose !</div>
             <button class="newGameButton-loose" onclick="newGame()">New game</button>
         </div>
+
         <script src="script/game.js"></script>
+        <script src="script/localStorageManager.js"></script>
     </body>
 </html>
